--- a/main-website/package.json
+++ b/main-website/package.json
@@ -13,5 +13,9 @@
         "laravel-vite-plugin": "^1.2.0",
         "tailwindcss": "^4.0.0",
         "vite": "^6.0.11"
+    },
+    "dependencies": {
+        "generate-password": "^1.7.1",
+        "generate-password-browser": "^1.1.0"
     }
 }
