--- a/main-website/mandi-admin/package.json
+++ b/main-website/mandi-admin/package.json
@@ -10,6 +10,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "generate-password-browser": "^1.1.0"
+    "generate-password-browser": "^1.1.0",
+    "jquery-text-counter": "^0.9.0"
   }
 }
